[package]
name = "markdown_render"
version = "0.1.0"
authors = ["lxy <liuxinyucpu@163.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
pulldown-cmark="0.9.2"
wasm-bindgen = "0.2.63"
lazy_static = "1.2"
serde = "1.0.102"
serde_derive = "1.0.102"
rand = "0.7.3"
web-sys = { version = "0.3.60", features = ["Window", "Document", "Element", "Node","Text","HtmlElement"] }



# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
# default = ["console_error_panic_hook" ,"wee_alloc"]
default = ["console_error_panic_hook"]
